# agistudio

./: CMakeLists.txt  COPYING  LICENSE  Makefile  README  README.md  _config.yml  agicommands.cpp  agicommands.h  agiplay.cpp  agistudio.1  agistudio.aps  agistudio.dsw  agistudio.pro  appveyor.yml  back.xpm  bpicture.cpp  changelog.txt  dir.cpp  dir.h  downarrow_x.xpm  forward.xpm  game.cpp  game.h  global.h  helpwindow.h  home.xpm  index.md  left.xpm  left1.xpm  left1_x.xpm  left2.xpm  left2_x.xpm  left_x.xpm  leftarrow_x.xpm  linklist.cpp  linklist.h  logcompile.cpp  logdecode.cpp  logedit.cpp  (+58 more)
.github/workflows/: multibuild.yml
_layouts/: default.html
cmake/: GetGitRevisionDescription.cmake  GitVersion.cmake
help/: about_agi.html  about_agi_studio.html  about_help.html  accept_input.html  add_to_pic.html  add_to_pic_v.html  adding_resources.html  addn.html  addv.html  agi-pic-template.sxd  allow_menu.html  animate_obj.html  assignn.html  assignv.html  block.html  call.html  call_v.html  cancel_line.html  center_posn.html  clear_lines.html  clear_text_rect.html  close_dialogue.html  close_window.html  commands_by_category.html  commands_by_name.html  compare_strings.html  configure_screen.html  control_commands.html  controller.html  controlling_obstacles.html  creating_new_games.html  current_cel.html  current_loop.html  current_view.html  cycle_time.html  cycling_objects.html  data_used.html  debug_commands.html  decrement.html  deleting_resources.html  (+243 more)
packaging/: README.Packaging  agistudio.desktop  qtagistudio.xpm
packaging/debian/: agistudio.doc-base  agistudio.install  agistudio.xpm  changelog  control  copyright  dirs  docs  menu  rules
packaging/rpm/: agistudio.spec
src/: AGIStudio.icns  CMakeLists.txt  Makefile  agicommands.cpp  agicommands.h  agiplay.cpp  agistudio.dsp  agistudio.kdevelop  agistudio.pro  agistudio.rc  app_icon.xpm  back.xpm  bmp2agipic.cpp  bmp2agipic.h  bpicture.cpp  dir.cpp  dir.h  downarrow_x.xpm  forward.xpm  game.cpp  game.h  global.h  helpwindow.cpp  helpwindow.h  home.xpm  left.xpm  left1.xpm  left1_x.xpm  left2.xpm  left2_x.xpm  left_x.xpm  leftarrow_x.xpm  linklist.cpp  linklist.h  logcompile.cpp  logdecode.cpp  logedit.cpp  logedit.h  logic.cpp  logic.h  (+56 more)
src/resources/: CMakeLists.txt  Info.plist  agistudio.rc  app_icon.xpm  left.xpm  left1.xpm  left1_x.xpm  left2.xpm  left2_x.xpm  left_x.xpm  logo.xpm  right1_x.xpm  right2.xpm  right_x.xpm  rightarrow_x.xpm  toolbar_close.xpm  toolbar_logedit.xpm  toolbar_open.xpm  toolbar_run.xpm  toolbar_textedit.xpm  toolbar_wordsedit.xpm  uparrow_x.xpm  zoom_minus.xpm  zoom_minus_x.xpm
src/ui/: CMakeLists.txt  agistudio.qrc  mainmenu.ui  objedit.ui  options.ui  picedit.ui  resources.ui  textedit.ui  viewedit.ui  wordsedit.ui  wordsfind.ui
template/: logdir  object  picdir  viewdir  vol.0  words.tok
template/src/: defines.txt  logic0.txt  logic1.txt  logic2.txt  logic90.txt  logic91.txt  logic92.txt  logic93.txt  logic94.txt  logic95.txt  logic98.txt  logic99.txt  newroom.txt
